# jquants-api-client-python

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude/commands/: issue-close.md  issue-start.md
docs/: README.md  phase3-design.md  user_guide_v2.md
docs/design/v2/: README.md  core.md  request-pipeline.md
docs/design/v2/endpoints/derivatives/: options_225_daily.md
docs/design/v2/endpoints/equities/: bars_daily.md  earnings_calendar.md  investor_types.md  master.md
docs/design/v2/endpoints/financials/: summary.md
docs/design/v2/endpoints/indices/: bars_daily.md  bars_daily_topix.md
docs/design/v2/endpoints/markets/: breakdown.md  calendar.md  margin_alert.md  margin_interest.md  short_ratio.md  short_sale_report.md
draft/design/: issue-33-indices-topix.md  issue-51-investor-types.md
examples/: README.md
jquants/: __init__.py  client_v1.py  client_v2.py  constants_v2.py  exceptions.py  pacer.py
jquantsapi/: client.py
tests/: conftest.py  test_client_v1.py  test_client_v2.py  test_client_v2_derivatives.py  test_client_v2_indices.py  test_client_v2_markets.py  test_constants_v2.py  test_endpoints_v2.py  test_exceptions.py  test_execute_json_request.py  test_fetch_date_range.py  test_fins_summary.py  test_pacer.py
tests/test_integration/: __init__.py  conftest.py  test_auth.py  test_dataframe.py  test_derivatives.py  test_equities.py  test_error_handling.py  test_fins.py  test_indices.py  test_markets.py  test_pagination.py  test_rate_limiter.py  test_request.py  test_retry.py
