[tool.poetry]
name = "jquants-api-client"
version = "0.0.0" # use poetry-dynamic-versioning
authors = [
    "J-Quants Project Contributors <j-quants@jpx.co.jp>",
]
description = "J-Quants API Client Library"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["jquants", "api", "client", "J-Quants"]
packages = [
    { include = "jquantsapi" },
    { include = "jquants" }
]
homepage = "https://github.com/J-Quants/jquants-api-client-python"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/J-Quants/jquants-api-client-python/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
types-requests = "^2.32.0"
pandas = ">=2.1.0"
numpy = ">=2.0.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
isort = "^6.0.0"
flake8 = "^7.0.0"
Flake8-pyproject = "^1.2.3"
mypy = "^1.15.0"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
types-python-dateutil = "^2.9.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"
per-file-ignores = "__init__.py:F401"
exclude = ".venv,.uv-cache,.poetry-cache"

[tool.isort]
profile = "black"
skip = [".venv", ".uv-cache", ".poetry-cache"]
skip_glob = ["**/node_modules/**"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring API key (run with 'pytest -m integration')",
]
testpaths = ["tests"]
# Exclude integration tests by default (they require API key and network access)
# Run integration tests explicitly: pytest -m integration
addopts = "-v -m 'not integration'"

[tool.coverage.run]
omit = [
    "jquants/client_v1.py",
    "jquants/constants_v1.py",
    "jquantsapi/*",
]
